--- a/gitfinder-app/src/index.css
+++ b/gitfinder-app/src/index.css
@@ -8,7 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(38, 38, 38);
+  background-color: #352560;
   padding: 0;
 }
 
@@ -18,7 +18,7 @@ code {
 }
 
 .navbar{
-  background-color: rgba(25, 25, 170, 0.4);
+  background-color: #190027;
   height: 30px;
   padding: 10px;
   display: flex;
@@ -46,7 +46,7 @@ code {
 
 .title-button{
   background-color: black;
-  border: 1px solid rgba(25, 25, 170, 0.4);
+  border: 1px solid #190027;
   border-radius: 10px;
   text-decoration: none;
   margin-inline: 20px;
@@ -74,11 +74,11 @@ code {
 }
 
 .back-to-home-button{
-  background-color: rgb(0, 0, 210);
+  background-color: #190027;
   width: 240px;
   font-size: 1.4rem;
   border-radius: 10px;
-  border: 1px solid rgb(0, 0, 210);
+  border: 1px solid #190027;
   color: white;
   display: flex;
   justify-content: center;
@@ -94,10 +94,14 @@ code {
 }
 
 .grid-container{
+  margin-top: 5%;
+  width: 75%;
   display: grid;
   grid-template-columns: repeat(4, 25%);
   column-gap: 1rem;
   row-gap: 1rem;
+  margin-inline: auto;
+  justify-content: center;
 }
 .grid-container > h3{
   text-align: center;
@@ -109,4 +113,50 @@ code {
   color: white;
   font-size: 4rem;
   text-align: center;
+}
+
+.user-item-container{
+  position: relative;
+  background-color: white;
+  height: 90px;
+  border:1px solid white;
+  border-radius: 10px;
+  animation-name: zoom-in;
+  animation-duration: 1s;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.user-item-container:hover{
+  animation-name: zoom-out;
+  animation-duration: 1s;
+}
+
+@keyframes zoom-in{
+  from{transform: scale(1.05);}
+  to{transform: scale(1);}
+}
+
+@keyframes zoom-out {
+  from{transform: scale(1);}
+  to{transform: scale(1.05);}
+}
+.img-container{
+  border-radius: 25%;
+  margin-inline: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.view-profile-link{
+  position: absolute;
+  right: 5px;
+  bottom: 0px;
+  color:#190027;
+  font-weight:900;
+}
+
+.login-name{
+  color: #190027;
+  font-weight: 900;
+  
 }
