--- a/gitfinder-app/src/index.css
+++ b/gitfinder-app/src/index.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -160,3 +158,36 @@ code {
   font-weight: 900;
   
 }
+
+.search-container{
+  margin-inline: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  align-items: center;
+}
+
+.search-input{
+  width: 400px;
+  height: 75px;
+  border-radius: 10px;
+  border: 5px solid black;
+  margin-right: 25px;
+  font-size: 24px;
+  color: black;
+  font-weight: 900;
+  padding-left: 20px;
+}
+
+.search-button, .clear-button{
+  width: 120px;
+  height: 75px;
+  background-color: black;
+  color: white;
+  font-weight:900;
+  font-size: 24px;
+  border: 3px solid white;
+  border-radius: 10px;
+  margin-right: 25px;
+}
+
